# yocto-gl

./: .clang-format  .gitignore  .gitmodules  .travis.yaml  .travis.yml  404.html  CMakeLists.txt  CMakePresets.json  CMakePresets_.json  CMakeSettings.json  Doxyfile  appveyor.yml  build.py  bunny.ply  google.yaml  index.html  llvm.yaml  mkdocs.yml  out-bug.hdr  out-good.hdr  out.hdr  out_new.hdr  readme.md  readme_.md  sitemap.xml  todo.md  travis.yml
apps/: CLI11.hpp  CMakeLists.txt  ThreadPool.h  build.linux.ninja  build.linux.sh  build.mingw64.sh  build.ninja  build.osx.ninja  build.osx.sh  build.w32.ninja  build.win.bat  build.windows.bat  fragment_shader.frag  libyocto.cpp  myview.cpp  readme.md  render_tests.sh  test_bvh.cpp  test_cmdline.cpp  test_obj.cpp  tinyply.cpp  tinyply.h  yapp.cpp  yapp.h  yapp_ui.cpp  yapp_ui.h  ycolorgrade.cpp  yconvert.cpp  yconverts.cpp  ycutrace.cpp  ydiagram.cpp  ygltfproc.cpp  ygltfview.cpp  yglui.cpp  yglui.h  yglutils.cpp  yglutils.h  yimalpha.cpp  yimdiff.cpp  yimgproc.cpp  (+52 more)
apps/_deprecated/: yscene.cpp  yshape.cpp
apps/deprecated/: CMakeLists.txt  yislandproc.cpp  ysceneuit.h  yscnitrace.cpp
apps/experimental/: CMakeLists.txt
apps/ext/: CLI11.hpp  filesystem.hpp  nanort.h  sajson.h  stb_image.h  thpool.c  thpool.h
apps/imgui/: imconfig.h  imgui.cpp  imgui_ext.h  imgui_impl_glfw_gl3.cpp  imgui_impl_opengl3.cpp
apps/nuklear/: nuklear_glfw_gl2.h
apps/ycityproc/: ycityproc.cpp
apps/ycolorgrade/: CMakeLists.txt  ycolorgrade.cpp
apps/yconvert/: CMakeLists.txt  yconvert.cpp
apps/yconverts/: CMakeLists.txt  yconverts.cpp
apps/ycutrace/: CMakeLists.txt  ycutrace.cpp
apps/yheightfieldproc/: yheightfieldproc.cpp
apps/yimage/: CMakeLists.txt  yimage.cpp
apps/yimage-imcli/: CMakeLists.txt  yimage-imcli.cpp
apps/yimage2/: CMakeLists.txt
apps/yimagedenoise/: CMakeLists.txt  yimagedenoise.cpp
apps/yimageproc/: yimageproc.cpp
apps/yimageview/: CMakeLists.txt  yimageview.cpp
apps/yimageviews/: yimageviews.cpp
apps/yimalpha/: CMakeLists.txt  yimalpha.cpp
apps/yimdiff/: CMakeLists.txt  yimdiff.cpp
apps/yimgproc/: CMakeLists.txt  yimgproc.cpp
apps/yimgview/: CMakeLists.txt  yimgview.cpp
apps/yimgviews/: CMakeLists.txt  yimgviews.cpp
apps/yimshproc/: CMakeLists.txt  yimshproc.cpp  yimshproc.h
apps/ymesh/: CMakeLists.txt  ymesh.cpp
apps/ymeshproc/: CMakeLists.txt  ymeshproc.cpp
apps/ymeshtest/: CMakeLists.txt  ymeshtest.cpp
apps/ymshproc/: CMakeLists.txt  ymshproc.cpp
apps/yocto.vs14/: yocto.sln  yocto.vcxproj  yocto.vcxproj.filters
apps/yocto.xcodeproj/: project.pbxproj
apps/ysamples/: CMakeLists.txt  ysamples.cpp
apps/yscene/: CMakeLists.txt  yscene.cpp
apps/ysceneitrace/: CMakeLists.txt  ysceneitrace.cpp
apps/ysceneitraces/: ysceneitraces.cpp
apps/ysceneitraces_city/: CMakeLists.txt  ysceneitraces.cpp
apps/ysceneproc/: CMakeLists.txt  ysceneproc.cpp  yshapedata.cpp  yshapedata.h
apps/yscenetrace/: yscenetrace.cpp
apps/ysceneview/: ysceneview.cpp
apps/ysceneviews/: ysceneviews.cpp
apps/yscnitrace/: CMakeLists.txt  yscnitrace.cpp
apps/yscnitraces/: CMakeLists.txt  yscnitraces.cpp
apps/yscnproc/: CMakeLists.txt  yscnproc.cpp
apps/yscntrace/: CMakeLists.txt  yscntrace.cpp
apps/yscnview/: CMakeLists.txt  yscnview.cpp
apps/ysculpt/: CMakeLists.txt  ysculpt.cpp
apps/ysculpting/: CMakeLists.txt  algorithms.h  ysculpting.cpp
apps/yshade/: CMakeLists.txt  yshade.cpp  yshade_scene.cpp  yshade_scene.h  yshade_sculpt.cpp  yshade_sculpt.h  yshade_sculpt_algorithms.h  yshade_shape.cpp  yshade_shape.h
apps/yshape/: CMakeLists.txt  yshape.cpp
apps/yshapeproc/: CMakeLists.txt  yshapeproc.cpp
apps/yshapeview/: yshapeview.cpp
apps/ytonemap/: CMakeLists.txt  ytonemap.cpp
apps/ytrace/: CMakeLists.txt  ytrace.cpp
apps/yview/: CMakeLists.txt  yview.cpp
exts/: CMakeLists.txt  notes.md
exts/cgltf/: CMakeLists.txt
exts/embed_ptx/: CMakeLists.txt  FindOptiX.cmake  embed_ptx.cmake  run_bin2c.cmake
exts/embree/: CMakeLists.txt
exts/glad/: CMakeLists.txt
exts/imgui/: CMakeLists.txt
exts/openimagedenoise/: CMakeLists.txt
exts/stb_image/: CMakeLists.txt
exts/tinyexr/: CMakeLists.txt
lib/ygui/: CMakeLists.txt
libs/ygl/: CMakeLists.txt  ycli.h  yimage.cpp  yimage.h  yobj.h  yocto_pbrt.h  yocto_sceneio.cpp  yocto_sceneio.h  yocto_shape.cpp  yocto_trace.cpp  ypbrt.h  yply.h  ysceneio.cpp  ysceneio.h  yshape.cpp  yshape.h  ytrace.cpp  ytrace.h
libs/yocto/: CMakeLists.txt  yocto_animation.h  yocto_bvh.cpp  yocto_bvh.h  yocto_cli.cpp  yocto_cli.h  yocto_color.h  yocto_common.h  yocto_commonio.cpp  yocto_commonio.h  yocto_cutrace.cpp  yocto_cutrace.cu  yocto_cutrace.h  yocto_diagram.cpp  yocto_diagram.h  yocto_ebvh.cpp  yocto_ebvh.h  yocto_geometry.h  yocto_geometryt.h  yocto_glview.cpp  yocto_glview.h  yocto_gui.cpp  yocto_gui.h  yocto_image.cpp  yocto_image.h  yocto_imageio.cpp  yocto_imageio.h  yocto_json.cpp  yocto_json.h  yocto_math.h  yocto_math_.h  yocto_math_old.h  yocto_maths.h  yocto_matht.h  yocto_mesh.cpp  yocto_mesh.h  yocto_modeling.h  yocto_modelio.cpp  yocto_modelio.h  yocto_ndarray.h  (+24 more)
libs/yocto_denoise/: CMakeLists.txt  yocto_denoise.cpp  yocto_denoise.h
libs/yocto_deprecated/: CMakeLists.txt  yocto_cli.h  yocto_glview.cpp  yocto_glview.h  yocto_imgui.cpp  yocto_json.cpp  (+4 more)
tools/: CMakeLists.txt  Doxyfile  build.py  cpp2doc.py  doxy2doc.py  gltf2cpp.py  readme.md  reflgen.py  run_tests.py  todo.md  ydocgen.cpp  ygltfgen.cpp
yocto/: CMakeLists.txt  integral_curves.h  stb_image.h  stb_image_write.h  ygl.cpp  ygl.h  yglio.cpp  yglio.h  ygltf.h  yobj.h  yocto_bvh.cpp  yocto_bvh.h  yocto_cli.h  yocto_cmd.cpp  yocto_cmd.h  yocto_cmdline.h  yocto_common.h  yocto_commonio.h  yocto_gl.cpp  yocto_gl.h  yocto_glio.cpp  yocto_glio.h  yocto_gltf.cpp  yocto_gltf.h  yocto_gltf1.cpp  yocto_gltf1.h  yocto_glu.cpp  yocto_glu.h  yocto_glutils.cpp  yocto_glutils.h  yocto_gui.cpp  yocto_gui.h  yocto_image.cpp  yocto_image.h  yocto_imageio.cpp  yocto_imageio.h  yocto_img.cpp  yocto_img.h  yocto_ioutils.h  yocto_json.h  (+33 more)
yocto_gui/: CMakeLists.txt  yocto_gui.h
(+602 files in other folders)
