function(add_yapp name)
  add_executable(${name}  ${name}.cpp)
  set_target_properties(${name}  PROPERTIES CXX_STANDARD 17 CXX_STANDARD_REQUIRED YES)
  target_include_directories(${name}  PRIVATE ${CMAKE_SOURCE_DIR}/libs)
  target_link_libraries(${name} PRIVATE yocto)
endfunction()

add_yapp(ytonemap)
add_yapp(ycolorgrade)
add_yapp(ytrace)
add_yapp(yview)
add_yapp(yimdiff)
add_yapp(yimalpha)
add_yapp(yconvert)
add_yapp(yconverts)
add_yapp(ysamples)

if(YOCTO_CUDA)
add_yapp(ycutrace)
endif()

